--- a/db/pom.xml
+++ b/db/pom.xml
@@ -1,31 +1,30 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>com.servus</groupId>
-    <artifactId>servus</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  
-  <groupId>com.servus</groupId>
-  <artifactId>db</artifactId>
-  <version>1.0-SNAPSHOT</version>
+	<parent>
+		<groupId>com.servus</groupId>
+		<artifactId>servus</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
-  <packaging>jar</packaging>
-  <name>Database</name>
+	<artifactId>db</artifactId>
+	<name>Database</name>
+	<packaging>jar</packaging>
 
-  <dependencies>
-    <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>8.0.20</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.20</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+	
 </project>
